# docs/swagger.json
@@ -157,6 +157,12 @@
                             "$ref": "#/definitions/gin.H"
                         }
                     },
+                    "409": {
+                        "description": "Bookmark code already exists",
+                        "schema": {
+                            "$ref": "#/definitions/gin.H"
+                        }
+                    },
                     "500": {
                         "description": "Internal server error",
                         "schema": {
@@ -196,9 +202,16 @@
                         "description": "Updated bookmark data",
                         "name": "request",
                         "in": "body",
-                        "required": true,
                         "schema": {
-                            "$ref": "#/definitions/github_com_huypham67_bookmark-service_internal_dto_bookmark.UpdateBookmarkRequest"
+                            "type": "object",
+                            "properties": {
+                                "description": {
+                                    "type": "string"
+                                },
+                                "url": {
+                                    "type": "string"
+                                }
+                            }
                         }
                     }
                 ],
@@ -210,7 +223,7 @@
                         }
                     },
                     "400": {
-                        "description": "Invalid request body",
+                        "description": "Invalid bookmark ID or request data",
                         "schema": {
                             "$ref": "#/definitions/gin.H"
                         }
@@ -261,6 +274,12 @@
                 "responses": {
                     "200": {
                         "description": "Bookmark deleted successfully",
+                        "schema": {
+                            "$ref": "#/definitions/gin.H"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid bookmark ID",
                         "schema": {
                             "$ref": "#/definitions/gin.H"
                         }
@@ -748,19 +767,6 @@
                 "description",
                 "url"
             ],
-            "properties": {
-                "description": {
-                    "type": "string",
-                    "maxLength": 500,
-                    "minLength": 2
-                },
-                "url": {
-                    "type": "string"
-                }
-            }
-        },
-        "github_com_huypham67_bookmark-service_internal_dto_bookmark.UpdateBookmarkRequest": {
-            "type": "object",
             "properties": {
                 "description": {
                     "type": "string",
